--- a/certification.html
+++ b/certification.html
@@ -282,7 +282,7 @@ body {
             align-items: center;
             justify-content: space-between;
             padding: 20px;
-            background-color: #fff;
+            background-color: #b4d0f7;
             /* Set background color for the content */
             color: #000;
             /* Set text color for the content */
