--- a/hac.html
+++ b/hac.html
@@ -356,7 +356,7 @@
         }
         
         .orange-heading:hover {
-            color: #FF6347;
+            color: #022b9a;
             letter-spacing: normal;
             word-spacing: normal;
             /* Change color on hover */
@@ -488,6 +488,36 @@
 	height: 420px;
 	overflow-y: scroll;
 }
+.custom-card {
+            background-color: #f9f9f9;
+            border: 2px solid #5abff2;
+            border-radius: 20px;
+            padding: 20px;
+            box-shadow: 0 8px 16px rgba(0,0,0,0.2);
+            margin-top: 20px;
+            transition: all 0.3s ease;
+        }
+        .custom-card:hover {
+            background-color: #d5ecff;
+            transform: scale(1.02);
+            box-shadow: 0 12px 24px rgba(0,0,0,0.3);
+            border: 5px solid #5abff2;
+
+        }
+        .custom-card p, .custom-card ol {
+            font-size: 1.1em;
+            line-height: 1.6;
+        }
+        .custom-card ol {
+            padding-left: 20px;
+        }
+        .custom-card img {
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+        }
+        .col-md-6.offset-md-3 {
+            margin-top: 20px;
+        }
     </style>
 </head>
 
@@ -703,28 +733,25 @@
                     <div class="row">
                         <div class="col-md-12">
                             <div class="custom-card">
-
+                                <h4 class="text-center mb-4" style="color: #617eff;">Fire and Explosion Risk Assessment</h4>
                                 <p>In the industrial plant where flammable liquids, gases and vapors, combustible dust or fibers and flying’s are handled, processed, or otherwise generated, there can be a risk of fire or explosion. In order to have a fire
-                                    or an explosion, fire triangle or explosion pentagon must be met. There must be fuel present, the fuel must be mixed with an oxidant in the appropriate ratio, and an ignition source of enough intensity must be present.
+                                    or an explosion, the fire triangle or explosion pentagon must be met. There must be fuel present, the fuel must be mixed with an oxidant in the appropriate ratio, and an ignition source of enough intensity must be present.
                                 </p>
-                                <p>Hazardous area classification (HAC) identifies the areas in a plant where an explosive or flammable atmosphere may be present under foreseeable circumstances.
-                                </p>
+                                <p>Hazardous area classification (HAC) identifies the areas in a plant where an explosive or flammable atmosphere may be present under foreseeable circumstances.</p>
                                 <p>The procedure is used to identify the extent and duration that flammable atmospheres can be present in normal and conceivable abnormal conditions. The aim is to identify whether flammable atmospheres can form in a process
-                                    equipment and process operation when the plant is in use and to identify whether the flammable atmosphere can be present: </p>
+                                    equipment and process operation when the plant is in use and to identify whether the flammable atmosphere can be present:</p>
                                 <ol>
                                     <li>Continuously</li>
                                     <li>During normal operation of the process, or</li>
-                                    <li>Only during abnormal or mal-operation conditions and then only for a short time.
-                                    </li>
+                                    <li>Only during abnormal or mal-operation conditions and then only for a short time.</li>
                                 </ol>
-                                <p>This assessment must cover the release of flammable materials, the nature of the material, ventilation, and frequency of release and the potential duration of such an event.
-                                </p>
-                                <div class="col-md-6 offset-md-3">
-                                    <!-- This will make each image take half the width on medium and larger screens -->
+                                <p>This assessment must cover the release of flammable materials, the nature of the material, ventilation, and frequency of release and the potential duration of such an event.</p>
+                                <div class="col-md-6 offset-md-3 text-center">
                                     <img src="images/vindus_clients_images/h1.png" class="card-img img-fluid" alt="Banner Image" height="300px" width="300px">
                                 </div>
                             </div>
                         </div>
+                 
                         <div class="col-md-12">
                             <div class="custom-card">
                                 <h3 class="orange-heading" align="center">Historical Perspective</h3> <br>
@@ -900,7 +927,7 @@
                                 </p>
                                 <p>Hazardous Areas Classification or HAC was primarily used for choosing electrical equipment to prevent ignition in hazardous atmospheres. Now HAC is being applied in risk assessments to areas that can contain flammable vapors,
                                     gases, combustible dust, or fibers.</p>
-                                <p> <strong style="color: #dc3545;">The classification includes the zoning of the areas handling –</strong></p>
+                                <p> <strong style="color: #3540dc;">The classification includes the zoning of the areas handling –</strong></p>
                                 <ul style="list-style: disc;">
                                     <li>Flammable chemicals according to IS 5572 and IEC 60079-10-1 and</li>
                                     <li>Dusts according to IEC 60079-10 – 2 Guideline- Electrical Apparatus for Explosive Gas Atmosphere or relevant NFPA standards</li>
@@ -936,7 +963,7 @@
                                     of electrical safety, process hazard analysis, standards & legal requirements, process steps and industry insights.</p>
                                 <p>We ensure that the results provide you with information that can help you to manage risks for your people.
                                 </p>
-                                <p><strong style="color: #dc3545;">The major steps for a HAC study are:
+                                <p><strong style="color: #4b35dc;">The major steps for a HAC study are:
                             </strong></p>
                                 <p><strong>Pre-activities: -</strong></p>
                                 <p>Understanding the scope of work and purpose of HAC based on the appropriate risk levels related to your industry sector, processes and people is the stepping stone. Selecting a small multidisciplinary HAC team from the
