--- a/GMPQUALITYCONSULTING.html
+++ b/GMPQUALITYCONSULTING.html
@@ -686,15 +686,14 @@
         <!-- END HEADER -->
 <br>
         <Main>
-            <section style="margin-top: 75px;">
-                <section class="why-us-section">
-                    <section class="why-us-header">
-                        <div class="container">
-                            <h5 class="why-us-title text-white s-46">GMP QUALITY CONSULTING</h5>
-                        </div>
-                    </section>
-                </section>
-            </section>
+            <div class="container-fluid mt-90">
+                <div class="project-title">
+                                                
+                    <!-- Title -->	
+                    <h2 class="s-30 w-700" style="background-image: url('images/vindus_clients_images/qua.jpg'); background-size: cover; background-position: center; color: #fff; text-align: center; padding: 100px; height: 300px;border-radius: 10px;">
+                        GMP QUALITY CONSULTING                 </h2>
+                      
+            </div>
 
             <section style="text-align: justify;">
 
