--- a/index.html
+++ b/index.html
@@ -827,17 +827,18 @@ body {
 
 		<!-- PAGE CONTENT
 		============================================= -->	
-		<div id="page" class="page font--jakarta" style="background-color:#1560bd;">
+		<div id="page" class="page font--jakarta" style="background-color:#1c5cab;">
 
 			<!-- HEADER
 			============================================= -->
 			<header class="tra-menu navbar-dark "  >
-				<div class="header-wrapper" style="background-color: #1560bd;">
+				<div class="header-wrapper" style="background:linear-gradient(#000040,#1560bd);">
 
 
 					<!-- MOBILE HEADER -->
-				    <div class="wsmobileheader " style="background-color: #1560bd;">	  	
-				    	<span class="smllogo"><img src="images/vindus_clients_images/FullColor_IconOnly_1024x1024_72dpi.jpg" alt="mobile-logo"></span>
+				    <div class="wsmobileheader " style="background:linear-gradient(#1560bd,#1560bd);">	  	
+				    	<span class="smllogo">                                                <img src="images/vindus_clients_images/cardlogo.jpg" alt="" class="rounded-circle" height="100px" width="100px">
+						</span>
 				    	<a id="wsnavtoggle" class="wsanimated-arrow"><span></span></a>	
 				 	</div>
 
@@ -850,15 +851,15 @@ body {
 	    					<!-- HEADER BLACK LOGO -->
 	    					<div class="desktoplogo" >
 	    						<a href="#" class="">
-	    							<img class="light-theme-img" src="images/vindus_clients_images/FullColor_IconOnly_1024x1024_72dpi.jpg" alt="logo">
-	    							<img class="dark-theme-img" src="images/vindus_clients_images/FullColor_IconOnly_1024x1024_72dpi.jpg" alt="logo">
+									<img src="images/vindus_clients_images/cardlogo.jpg" alt="" class="rounded-circle" height="100px" width="100px">
 	    						</a>
 	    					</div>
 	    					
 
 	    					<!-- HEADER WHITE LOGO -->
 	    					<div class="desktoplogo">
-	    						<a href="#" class="logo-white"><img src="images/logo-blue-white.png" alt="logo"></a>
+	    						<a href="#" class="logo-white">                                                <img src="images/vindus_clients_images/cardlogo.jpg" alt="" class="rounded-circle" height="100px" width="100px">
+								</a>
 	    					</div>
 
 
