--- a/fivestar1.html
+++ b/fivestar1.html
@@ -467,35 +467,36 @@
 
         <!-- HEADER
 			============================================= -->
-        <header id="header" class="tra-menu navbar-dark inner-page-header white-scroll">
-            <div class="header-wrapper">
+        <header id="header" class="tra-menu navbar-dark " style="background:linear-gradient(#000040,#1560bd,#1560bd);">
+            <div class="header-wrapper" style="background:linear-gradient(#000040,#1560bd,#1560bd);">
 
 
-                <!-- MOBILE HEADER -->
-                <div class="wsmobileheader clearfix">
-                    <span class="smllogo"><img src="images/vindus_clients_images/FullColor_IconOnly_1024x1024_72dpi.jpg" alt="mobile-logo"></span>
-                    <a id="wsnavtoggle" class="wsanimated-arrow"><span></span></a>
-                </div>
+               <!-- MOBILE HEADER -->
+				    <div class="wsmobileheader clearfix">	  	
+				    	<span class="smllogo">                                                <img src="images/vindus_clients_images/cardlogo.jpg" alt="" class="rounded-circle" height="100px" width="100px">
+						</span>
+				    	<a id="wsnavtoggle" class="wsanimated-arrow"><span></span></a>	
+				 	</div>
 
 
-                <!-- NAVIGATION MENU -->
-                <div class="wsmainfull menu clearfix">
-                    <div class="wsmainwp clearfix">
+				 	<!-- NAVIGATION MENU -->
+				  	<div class="wsmainfull menu clearfix" >
+	    				<div class="wsmainwp clearfix" >
 
 
-                        <!-- HEADER BLACK LOGO -->
-                        <div class="desktoplogo">
-                            <a href="#" class="">
-                                <img class="light-theme-img" src="images/vindus_clients_images/FullColor_IconOnly_1024x1024_72dpi.jpg" alt="logo">
-                                <img class="dark-theme-img" src="images/vindus_clients_images/FullColor_IconOnly_1024x1024_72dpi.jpg" alt="logo">
-                            </a>
-                        </div>
+	    					<!-- HEADER BLACK LOGO -->
+	    					<div class="desktoplogo" >
+	    						<a href="#" class="">
+									<img src="images/vindus_clients_images/cardlogo.jpg" alt="" class="rounded-circle" height="100px" width="100px">
+	    						</a>
+	    					</div>
+	    					
 
-
-                        <!-- HEADER WHITE LOGO -->
-                        <div class="desktoplogo">
-                            <a href="#" class="logo-white"><img src="images/logo-blue-white.png" alt="logo"></a>
-                        </div>
+	    					<!-- HEADER WHITE LOGO -->
+	    					<div class="desktoplogo">
+	    						<a href="#" class="logo-white">                                                <img src="images/vindus_clients_images/cardlogo.jpg" alt="" class="rounded-circle" height="100px" width="100px">
+								</a>
+	    					</div>
 
 
                         <!-- MAIN MENU -->
@@ -950,14 +951,17 @@
                             <h6 class="s-17 w-700" style="color:#fff;">Connect With Us</h6>
 
                             <!-- Mail Link -->
-                            <p class="footer-mail-link ico-25">
-                                <a href="mailto:info@mlcqehs.com" style="color:#fff;">
-                                    <i class="fas fa-envelope"></i> info@mlcqehs.com
+                           <p class="footer-mail-link ico-25">
+									<a href="mailto:info@mlcqehs.com" style="color:#fff;">
+                    <i class="fas fa-envelope"></i>&nbsp;Email :<br>
+                      info@mlcqehs.com
 
-                                </a>
-                                <br><br>
-                                <i class="fas fa-mobile-alt"></i> +91 9949845759 <br> +91 7726932023
-                            </p>
+									</a>
+                 
+                  <a href="mailto:contactmlconsultancy@gmail.com" style="color:#fff;">contactmlconsultancy@gmail.com</a>
+									<br><br>
+									<i class="fas fa-mobile-alt"></i> +91&nbsp; 99498&nbsp;45759<br><i class="fas fa-mobile-alt"></i>&nbsp;+91 &nbsp;77269&nbsp;32023
+								</p>
 
 
                             <!-- Social Links -->
