--- a/survelliance.html
+++ b/survelliance.html
@@ -209,8 +209,8 @@ body {
 
 			<!-- HEADER
 			============================================= -->
-			<header id="header" class="tra-menu navbar-dark " style="background:linear-gradient(#000040,#1560bd,#1560bd);">
-				<div class="header-wrapper" style="background:linear-gradient(#000040,#1560bd,#1560bd);">
+			<header id="header" class="tra-menu navbar-dark inner-page-header white-scroll">
+				<div class="header-wrapper">
 
 
 					<!-- MOBILE HEADER -->
