--- a/documentation.html
+++ b/documentation.html
@@ -317,8 +317,9 @@
 
 			<!-- HEADER
 			============================================= -->
-			<header id="header" class="tra-menu navbar-dark " style="background:linear-gradient(#000040,#1560bd,#1560bd);">
-				<div class="header-wrapper" style="background:linear-gradient(#000040,#1560bd,#1560bd);">
+			<header id="header" class="tra-menu navbar-dark inner-page-header white-scroll">
+				<div class="header-wrapper">
+
 
 
 					<!-- MOBILE HEADER -->
