--- a/ems.html
+++ b/ems.html
@@ -231,8 +231,9 @@ body {
 
 			<!-- HEADER
 			============================================= -->
-			<header id="header" class="tra-menu navbar-dark " style="background:linear-gradient(#000040,#1560bd,#1560bd);">
-				<div class="header-wrapper" style="background:linear-gradient(#000040,#1560bd,#1560bd);">
+<header id="header" class="tra-menu navbar-dark inner-page-header white-scroll">
+				<div class="header-wrapper">
+
 
 
 					<!-- MOBILE HEADER -->
