--- a/index.html
+++ b/index.html
@@ -827,12 +827,12 @@ body {
 
 		<!-- PAGE CONTENT
 		============================================= -->	
-		<div id="page" class="page font--jakarta" style="background-color:#1c5cab;">
+		<div id="page" class="page font--jakarta" style="background-color:#0c5ab9;">
 
 			<!-- HEADER
 			============================================= -->
 			<header class="tra-menu navbar-dark "  >
-				<div class="header-wrapper" style="background:linear-gradient(#000040,#1560bd);">
+				<div class="header-wrapper" style="background:linear-gradient(#010166,#1560bd);">
 
 
 					<!-- MOBILE HEADER -->
@@ -841,7 +841,6 @@ body {
 						</span>
 				    	<a id="wsnavtoggle" class="wsanimated-arrow"><span></span></a>	
 				 	</div>
-
 
 				 	<!-- NAVIGATION MENU -->
 				  	<div class="wsmainfull menu clearfix" >
