--- a/auditing.html
+++ b/auditing.html
@@ -265,8 +265,8 @@ li{
 
 			<!-- HEADER
 			============================================= -->
-			<header id="header" class="tra-menu navbar-dark inner-page-header white-scroll">
-				<div class="header-wrapper">
+			<header id="header" class="tra-menu navbar-dark " style="background:linear-gradient(#010166,#1560bd,#1560bd);">
+				<div class="header-wrapper" style="background:linear-gradient(#010166,#1560bd,#1560bd);">
 
 
 					<!-- MOBILE HEADER -->
