--- a/ims.html
+++ b/ims.html
@@ -254,8 +254,8 @@ body {
 
 			<!-- HEADER
 			============================================= -->
-			<header id="header" class="tra-menu navbar-dark inner-page-header white-scroll">
-				<div class="header-wrapper">
+			<header id="header" class="tra-menu navbar-dark " style="background:linear-gradient(#010166,#1560bd,#1560bd);">
+				<div class="header-wrapper" style="background:linear-gradient(#010166,#1560bd,#1560bd);">
 
 
 					<!-- MOBILE HEADER -->
@@ -445,7 +445,8 @@ body {
 			</header>	
 
 <br>
-
+<br>
+		<br>
 
 
 
