--- a/safety.html
+++ b/safety.html
@@ -239,8 +239,8 @@ body {
 
                 <!-- HEADER
                 ============================================= -->
-                <header id="header" class="tra-menu navbar-dark inner-page-header white-scroll">
-				<div class="header-wrapper">
+              <header id="header" class="tra-menu navbar-dark " style="background:linear-gradient(#010166,#1560bd,#1560bd);">
+				<div class="header-wrapper" style="background:linear-gradient(#010166,#1560bd,#1560bd);">
 
     
     
@@ -424,7 +424,8 @@ body {
                 </header>	
 
 <br>
-
+<br>
+		    <br>
 
 <div class="container mt-5" style="text-align: justify;">
 	<div class="jumbotron bg-warning" style="background-image: url(images/vindus_clients_images/blue.jpg);" >
