--- a/safety.html
+++ b/safety.html
@@ -239,13 +239,12 @@ body {
 
                 <!-- HEADER
                 ============================================= -->
-              <header id="header" class="tra-menu navbar-dark " style="background:linear-gradient(#010166,#1560bd,#1560bd);">
+              	<header id="header" class="tra-menu navbar-dark " style="background:linear-gradient(#010166,#1560bd,#1560bd);">
 				<div class="header-wrapper" style="background:linear-gradient(#010166,#1560bd,#1560bd);">
 
-    
-    
-                      <!-- MOBILE HEADER -->
-				    <div class="wsmobileheader clearfix">	  	
+
+					<!-- MOBILE HEADER -->
+				    <div class="wsmobileheader clearfix" style="background:linear-gradient(#010166,#1560bd,#1560bd);">	  	
 				    	<span class="smllogo">                                                <img src="images/vindus_clients_images/cardlogo.jpg" alt="" class="rounded-circle" height="100px" width="100px">
 						</span>
 				    	<a id="wsnavtoggle" class="wsanimated-arrow"><span></span></a>	
@@ -425,7 +424,7 @@ body {
 
 <br>
 <br>
-		    <br>
+		 
 
 <div class="container mt-5" style="text-align: justify;">
 	<div class="jumbotron bg-warning" style="background-image: url(images/vindus_clients_images/blue.jpg);" >
