--- a/certification1.html
+++ b/certification1.html
@@ -241,13 +241,12 @@
 
 			<!-- HEADER
 			============================================= -->
-			<header id="header" class="tra-menu navbar-dark inner-page-header white-scroll">
-				<div class="header-wrapper">
-
+				<header id="header" class="tra-menu navbar-dark " style="background:linear-gradient(#010166,#1560bd,#1560bd);">
+				<div class="header-wrapper" style="background:linear-gradient(#010166,#1560bd,#1560bd);">
 
 
 					<!-- MOBILE HEADER -->
-				    <div class="wsmobileheader clearfix">	  	
+				    <div class="wsmobileheader clearfix" style="background:linear-gradient(#010166,#1560bd,#1560bd);">	  	
 				    	<span class="smllogo">                                                <img src="images/vindus_clients_images/cardlogo.jpg" alt="" class="rounded-circle" height="100px" width="100px">
 						</span>
 				    	<a id="wsnavtoggle" class="wsanimated-arrow"><span></span></a>	
@@ -424,7 +423,7 @@
 			</header>	
 
 <br>
-
+<br>
 
 
 <Main>
