--- a/certification4.html
+++ b/certification4.html
@@ -253,17 +253,16 @@ body {
 
 			<!-- HEADER
 			============================================= -->
-			<header id="header" class="tra-menu navbar-dark inner-page-header white-scroll">
-				<div class="header-wrapper">
+				<header id="header" class="tra-menu navbar-dark " style="background:linear-gradient(#010166,#1560bd,#1560bd);">
+				<div class="header-wrapper" style="background:linear-gradient(#010166,#1560bd,#1560bd);">
 
 
 					<!-- MOBILE HEADER -->
-				    <div class="wsmobileheader clearfix">	  	
+				    <div class="wsmobileheader clearfix" style="background:linear-gradient(#010166,#1560bd,#1560bd);">	  	
 				    	<span class="smllogo">                                                <img src="images/vindus_clients_images/cardlogo.jpg" alt="" class="rounded-circle" height="100px" width="100px">
 						</span>
 				    	<a id="wsnavtoggle" class="wsanimated-arrow"><span></span></a>	
 				 	</div>
-
 
 				 	<!-- NAVIGATION MENU -->
 				  	<div class="wsmainfull menu clearfix" >
@@ -438,7 +437,7 @@ body {
 			</header>	
 
 <br>
-
+<br>
 
 <Main>
     <section style="margin-top: 55px; text-align: justify;">
