--- a/fivestar6.html
+++ b/fivestar6.html
@@ -466,18 +466,16 @@
 
         <!-- HEADER
 			============================================= -->
-       <header id="header" class="tra-menu navbar-dark inner-page-header white-scroll">
-				<div class="header-wrapper">
+     	<header id="header" class="tra-menu navbar-dark " style="background:linear-gradient(#010166,#1560bd,#1560bd);">
+				<div class="header-wrapper" style="background:linear-gradient(#010166,#1560bd,#1560bd);">
 
 
-
-               <!-- MOBILE HEADER -->
-				    <div class="wsmobileheader clearfix">	  	
+					<!-- MOBILE HEADER -->
+				    <div class="wsmobileheader clearfix" style="background:linear-gradient(#010166,#1560bd,#1560bd);">	  	
 				    	<span class="smllogo">                                                <img src="images/vindus_clients_images/cardlogo.jpg" alt="" class="rounded-circle" height="100px" width="100px">
 						</span>
 				    	<a id="wsnavtoggle" class="wsanimated-arrow"><span></span></a>	
 				 	</div>
-
 
 				 	<!-- NAVIGATION MENU -->
 				  	<div class="wsmainfull menu clearfix" >
@@ -653,7 +651,7 @@
             </div>
             <!-- End header-wrapper -->
         </header>
-        <br><br><br>
+        <br><br><br><br>
 
 
 
