--- a/index.html
+++ b/index.html
@@ -695,6 +695,17 @@ overflow-y: scroll;
         }
 
 
+		.email-link {
+  color: #fff;
+  white-space: nowrap; /* Prevents text from wrapping to the next line */
+}
+
+@media (max-width: 768px) {
+  .email-link {
+    font-size: 16px; /* Adjust font size if necessary */
+  }
+}
+
 
 </style>
 	<meta name="google-site-verification" content="-ECINhQvyWuPbPMjYWEgrrAwC2ogJCJipBIp3ECVQe0" />
@@ -856,12 +867,12 @@ overflow-y: scroll;
 
 		<!-- PAGE CONTENT
 		============================================= -->	
-		<div id="page" class="page font--jakarta" style="background-color:#0c5ab9;">
+		<div id="page" class="page font--jakarta" >
 
 			<!-- HEADER
 			============================================= -->
 			<header class="tra-menu navbar-dark "  >
-				<div class="header-wrapper" style="background:linear-gradient(#010166,#1560bd);">
+				<div class="header-wrapper" style="background-color:#050C9C;">
 
 
 					<!-- MOBILE HEADER -->
@@ -1932,7 +1943,7 @@ var essb_settings = {"ajax_url":"https:\/\/jthemes.net\/themes\/wp\/martex\/wp-a
 
 									</a>
                  
-                  <a href="mailto:contactmlconsultancy@gmail.com" style="color:#fff;">contactmlconsultancy@gmail.com</a>
+									<a href="mailto:contactmlconsultancy@gmail.com" class="email-link" style="color: white;">contactmlconsultancy@gmail.com</a>
 									<br><br>
 									<i class="fas fa-mobile-alt"></i> +91&nbsp; 99498&nbsp;45759<br><i class="fas fa-mobile-alt"></i>&nbsp;+91 &nbsp;77269&nbsp;32023
 								</p>
