--- a/index.html
+++ b/index.html
@@ -867,12 +867,12 @@ overflow-y: scroll;
 
 		<!-- PAGE CONTENT
 		============================================= -->	
-		<div id="page" class="page font--jakarta" >
+		<div id="page" class="page font--jakarta" style="background-color:#0c5ab9;">
 
 			<!-- HEADER
 			============================================= -->
 			<header class="tra-menu navbar-dark "  >
-				<div class="header-wrapper" style="background-color:#050C9C;">
+				<div class="header-wrapper" style="background:linear-gradient(#010166,#1560bd);">
 
 
 					<!-- MOBILE HEADER -->
@@ -881,6 +881,7 @@ overflow-y: scroll;
 						</span>
 				    	<a id="wsnavtoggle" class="wsanimated-arrow"><span></span></a>	
 				 	</div>
+
 
 				 	<!-- NAVIGATION MENU -->
 				  	<div class="wsmainfull menu clearfix" >
