--- a/index.html
+++ b/index.html
@@ -867,16 +867,16 @@ overflow-y: scroll;
 
 		<!-- PAGE CONTENT
 		============================================= -->	
-		<div id="page" class="page font--jakarta" style="background-color:#0c5ab9;">
+			<div id="page" class="page font--jakarta" style="background-color:#050C9C;" >
 
 			<!-- HEADER
 			============================================= -->
 			<header class="tra-menu navbar-dark "  >
-				<div class="header-wrapper" style="background:linear-gradient(#010166,#1560bd);">
+				<div class="header-wrapper" style="background-color:#050C9C;">
 
 
 					<!-- MOBILE HEADER -->
-				    <div class="wsmobileheader " style="background:linear-gradient(#1560bd,#1560bd);">	  	
+				    <div class="wsmobileheader " style="background-color:#050C9C;">	  	
 				    	<span class="smllogo">                                                <img src="images/vindus_clients_images/cardlogo.jpg" alt="" class="rounded-circle" height="100px" width="100px">
 						</span>
 				    	<a id="wsnavtoggle" class="wsanimated-arrow"><span></span></a>	
