--- a/safety.html
+++ b/safety.html
@@ -587,7 +587,7 @@ body {
     </a>
 </div>
 
-<div id="scroll-to-top" onclick="scrollToTop()">
+<div id="scroll-to-top" onclick="scrollToTop()" style="display: block;">
 	<i class="fa-solid fa-circle-up" style="font-size: 30px;"></i>
 </div>
 
