--- a/index.html
+++ b/index.html
@@ -568,21 +568,7 @@ body {
         transform: scale(1.02);
     }
 }
-#scroll-to-top {
-    position: fixed;
-    bottom: 80px;
-    right: 35px;
-    cursor: pointer;
-    border-radius: 90%;
-    padding: 10px;
-    transition: background-color 0.3s;
-    display: none;
-    z-index: 9999; /* Added z-index property */
-}
 
-#scroll-to-top i {
-    color: rgb(3, 116, 214);
-}
 
 		 @keyframes bounceIn {
     0%, 20%, 40%, 60%, 80%, 100% {
@@ -1856,26 +1842,29 @@ var essb_settings = {"ajax_url":"https:\/\/jthemes.net\/themes\/wp\/martex\/wp-a
     </a>
 </div>
 
-<div id="scroll-to-top" onclick="scrollToTop()">
-	<i class="fa-solid fa-circle-up" style="font-size: 30px;"></i>
-</div>
+<button id="scrollToTopBtn" class="btn" style="display: block;">
+    <i class="fa-solid fa-circle-up" style="font-size: 30px;color: #0275b3;"></i>
+</button>
 
+<!-- jQuery and Bootstrap JS -->
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 <script>
-	function scrollToTop() {
-		window.scrollTo({
-			top: 0,
-			behavior: 'smooth'
-		});
-	}
+    // Show or hide the button based on scroll position
+    $(window).scroll(function() {
+        if ($(this).scrollTop() > 100) {
+            $('#scrollToTopBtn').fadeIn();
+        } else {
+            $('#scrollToTopBtn').fadeOut();
+        }
+    });
 
-	window.addEventListener('scroll', function() {
-		const scrollToTopBtn = document.getElementById('scroll-to-top');
-		if (window.scrollY > 200) {
-			scrollToTopBtn.style.display = 'block';
-		} else {
-			scrollToTopBtn.style.display = 'none';
-		}
-	});
+    // Smooth scroll to top
+    $('#scrollToTopBtn').click(function() {
+        $('html, body').animate({ scrollTop: 0 }, 600);
+        return false;
+    });
     </script>
 <!-- FOOTER-3
 			============================================= -->
