--- a/ims.html
+++ b/ims.html
@@ -218,6 +218,29 @@ body {
 	height: 420px;
 	overflow-y: scroll;
 }
+.banner {
+      position: relative;
+      text-align: center;
+      color: white;
+      width: 100%;
+      height: 450px;
+      overflow: hidden;
+	  
+    }
+    .banner img {
+      width: 100%;
+      height: 450px;
+    }
+    .banner-heading {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background-color: rgba(7, 85, 254, 0.7); /* Blue transparent background */
+      padding: 20px;
+      border-radius: 10px;
+      color: white;
+    }
        </style>
 	</head>
 
@@ -436,11 +459,10 @@ body {
 
 <div class="container mt-5">
 	<div class="card mb-3">
-		<div class="row no-gutters">
-			<div class="col-md-12">
-				<img src="images/vindus_clients_images/Ims.jpg" class="card-img" alt="Banner Image" width="500px">
-			</div>
-		</div>
+		<div class="banner">
+			<img src="images/vindus_clients_images/IMS Auditing .gif" alt="Banner Image">
+			<h1 class="banner-heading">IMS Auditing</h1>
+		  </div>
 	</div>
 	<div class="container">
 	<h1 style="color: #1560bd;">What are called IMS Audits</h1><br>
