--- a/safety.html
+++ b/safety.html
@@ -199,6 +199,29 @@ body {
 	height: 420px;
 	overflow-y: scroll;
 }
+.banner {
+      position: relative;
+      text-align: center;
+      color: white;
+      width: 100%;
+      height: 450px;
+      overflow: hidden;
+	  
+    }
+    .banner img {
+      width: 100%;
+      height: 450px;
+    }
+    .banner-heading {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background-color: rgba(7, 85, 254, 0.7); /* Blue transparent background */
+      padding: 20px;
+      border-radius: 10px;
+      color: white;
+    }
 </style>
 	</head>
 
@@ -406,8 +429,11 @@ body {
                 </header>	
 
 <br>
-<br>
-		 
+<br><br>
+<div class="banner">
+    <img src="images/vindus_clients_images/safety.gif" alt="Banner Image">
+    <h2 class="banner-heading">Safety Audit</h2>
+  </div>	 
 
 <div class="container mt-5" style="text-align: justify;">
 	<div class="jumbotron bg-warning" style="background-image: url(images/vindus_clients_images/blue.jpg);" >
