--- a/env.html
+++ b/env.html
@@ -134,20 +134,7 @@ li {
 ul {
 	padding: 20px;
 }
-.jumbotron {
-    background-image: url('images/vindus_clients_images/env1.jpg'); /* Replace with actual image URL */
-    background-size: cover;
-    width: 100%; /* Set the width to 100% of its container */
-    height: 400px;
 
-  }
-  @media (max-width: 767px) {
-    .jumbotron {
-        /* Styles for mobile view */
-        background-image: url('images/vindus_clients_images/env1.jpg'); /* Replace with actual image URL */
-        height: 300px; /* Adjust height for mobile */
-    }
-}
 body {
     -webkit-user-select: none; /* Safari */
     -moz-user-select: none; /* Firefox */
@@ -187,7 +174,31 @@ body {
 #services-menu{
 	height: 420px;
 	overflow-y: scroll;
-}
+}.banner {
+      position: relative;
+      text-align: center;
+      color: white;
+      width: 100%;
+      height: 450px;
+      overflow: hidden;
+	  
+    }
+    .banner img {
+      width: 100%;
+      height: 450px;
+    }
+    .banner-heading {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background-color: rgba(7, 85, 254, 0.7); /* Blue transparent background */
+      padding: 20px;
+      border-radius: 10px;
+      color: white;
+    }
+
+
 </style>
 	</head>
 
@@ -401,11 +412,12 @@ body {
     <div class="row">
         <div >
             <!-- Main content -->
-			<h1 class="text-center mb-4 text-primary  mt-4">Environmental Auditing</h1>
             <div class="container mt-5">
-                <div class="jumbotron ">
-                  
-                </div>
+                <div class="banner">
+					<img src="images/vindus_clients_images/environment.gif" alt="Banner Image">
+					<h2 class="banner-heading">Environmental Audit</h2>
+				  </div>
+				  <br>
             <p>  <strong style="color: blue;">Environmental auditing</strong> is essentially an environmental management tool for measuring the effects of certain activities on the environment against set criteria or standards. Depending on the types of standards and the focus of the audit, there are different types of environmental audits. Organizations of all kinds now recognize the importance of environmental matters and accept that their environmental performance will be scrutinized by a wide range of interested parties.</p>
             <p>Environmental auditing is used to:</p>
             <ol>
