--- a/survelliance.html
+++ b/survelliance.html
@@ -173,6 +173,29 @@ body {
 	height: 420px;
 	overflow-y: scroll;
 }
+.banner {
+      position: relative;
+      text-align: center;
+      color: white;
+      width: 100%;
+      height: 450px;
+      overflow: hidden;
+	  
+    }
+    .banner img {
+      width: 100%;
+      height: 450px;
+    }
+    .banner-heading {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background-color: rgba(7, 85, 254,0.7); /* Blue transparent background */
+      padding: 20px;
+      border-radius: 10px;
+      color: white;
+    }
 </style>
 	</head>
 
@@ -385,13 +408,10 @@ body {
 
 
 <div class="container mt-5">
-	<div class="card mb-3" style="margin-top: 55px;">
-		<div class="row no-gutters">
-			<div class="col-md-12">
-				<img src="images/vindus_clients_images/Survelliance.png" class="card-img" alt="Banner Image" width="100%" height="400px">
-			</div>
-		</div>
-	</div>
+	<div class="banner">
+		<img src="images/vindus_clients_images/surveillance.gif" alt="Banner Image">
+		<h1 class="banner-heading">Surveillance Audit</h1>
+	  </div>
     <div>
 
 
