--- a/fireprotection.html
+++ b/fireprotection.html
@@ -274,6 +274,29 @@
 	height: 420px;
 	overflow-y: scroll;
 }
+.banner {
+      position: relative;
+      text-align: center;
+      color: white;
+      width: 100%;
+      height: 450px;
+      overflow: hidden;
+	  
+    }
+    .banner img {
+      width: 100%;
+      height: 450px;
+    }
+    .banner-heading {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background-color: rgba(7, 85, 254, 0.5); /* Blue transparent background */
+      padding: 20px;
+      border-radius: 10px;
+      color: white;
+    }
 </style>
 	</head>
 
@@ -483,11 +506,10 @@
 
 
 <div class="container-fluid mt-90">
-    <div class="project-title">
-        <!-- Title -->
-        <h2 class="s-30 w-700" style="background-image: url('images/vindus_clients_images/postman.gif'); background-size: cover; background-position: center; color: #fff; text-align: center; padding: 100px; height: 300px;">
-            MLConsultancy Fire Protection Services
-        </h2>
+	<div class="banner">
+		<img src="images/vindus_clients_images/fire protection.gif" alt="Banner Image">
+		<h4 class="banner-heading">Fire Protection</h4>
+	  </div>
     </div>
 
         <div class="container" style="text-align: justify;">
