--- a/safetystudies.html
+++ b/safetystudies.html
@@ -234,6 +234,29 @@
 	height: 420px;
 	overflow-y: scroll;
 }
+.banner {
+      position: relative;
+      text-align: center;
+      color: white;
+      width: 100%;
+      height: 450px;
+      overflow: hidden;
+	  
+    }
+    .banner img {
+      width: 100%;
+      height: 450px;
+    }
+    .banner-heading {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background-color: rgba(7, 85, 254, 0.7); /* Blue transparent background */
+      padding: 20px;
+      border-radius: 10px;
+      color: white;
+    }
     </style>
 </head>
 
@@ -441,9 +464,12 @@
 <br><br>
 
     <Main>
+        <div class="banner">
+            <img src="images/vindus_clients_images/safetyst.gif" alt="Banner Image">
+            <h4 class="banner-heading">Safety Studies</h4>
+          </div>
         <section style="margin-top: 55px;">
             <div class="container mt-5">
-                <h3 style="color: #1560bd; text-align: center;">Safety Studies</h3> <br>
                 <div class="row">
 
                     <!-- Fire Safety -->
