--- a/powersystem.html
+++ b/powersystem.html
@@ -528,6 +528,29 @@
 	height: 420px;
 	overflow-y: scroll;
 }
+.banner {
+      position: relative;
+      text-align: center;
+      color: white;
+      width: 100%;
+      height: 450px;
+      overflow: hidden;
+	  
+    }
+    .banner img {
+      width: 100%;
+      height: 450px;
+    }
+    .banner-heading {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background-color: rgba(7, 85, 254, 0.7); /* Blue transparent background */
+      padding: 20px;
+      border-radius: 10px;
+      color: white;
+    }
     </style>
 </head>
 
@@ -739,14 +762,18 @@
 <br>
 
         <Main>
+            
             <section style="margin-top: 75px;">
+                <div class="banner">
+                    <img src="images/vindus_clients_images/powersys.gif" alt="Banner Image">
+                    <h4 class="banner-heading">Power System Studies</h4>
+                  </div>
                 <section class="why-us-section">
                     <section class="why-us-header">
                         <div class="container">
-                            <h1 class="why-us-title text-white s-46">Power System Studies</h1>
+                            <h1 class="why-us-title text-white s-46">Why Us?</h1>
                         </div>
                     </section>
-                    <h4 style="color: #1560bd; padding: 10px;">Why Us?</h4>
                     <div class="container">
 
                         <div class="row">
