--- a/firedetection.html
+++ b/firedetection.html
@@ -293,6 +293,29 @@
 	height: 420px;
 	overflow-y: scroll;
 }
+.banner {
+      position: relative;
+      text-align: center;
+      color: white;
+      width: 100%;
+      height: 450px;
+      overflow: hidden;
+	  
+    }
+    .banner img {
+      width: 100%;
+      height: 450px;
+    }
+    .banner-heading {
+      position: absolute;
+      top: 15%;
+      right: 0%;
+      transform: translate(-50%, -50%);
+      background-color: rgba(7, 85, 254, 0.7); /* Blue transparent background */
+      padding: 20px;
+      border-radius: 10px;
+      color: white;
+    }
 </style>
 	</head>
 
@@ -504,17 +527,13 @@
 
 
 <div class="container-fluid mt-5">
-    <div class="jumbotron" style="background-image: url('images/vindus_clients_images/fd.jpg');">
-        <div class="container">
-            <!-- Title -->
-            <h2 class="s-30 w-700 text-white text-center py-5">
-                Ignite Your Safety with Cutting-Edge Fire Detection Solutions for a Healthier Environment!
-            </h2>
-        </div>
-    </div>
+    <div class="banner">
+		<img src="images/vindus_clients_images/fire detection.gif" alt="Banner Image">
+		<h4 class="banner-heading">Fire Detection</h4>
+	  </div>
 </div>
 
-    
+    <br>
 
 
 
