--- a/firesuppression.html
+++ b/firesuppression.html
@@ -317,6 +317,29 @@ body {
 	height: 420px;
 	overflow-y: scroll;
 }
+.banner {
+      position: relative;
+      text-align: center;
+      color: white;
+      width: 100%;
+      height: 450px;
+      overflow: hidden;
+	  
+    }
+    .banner img {
+      width: 100%;
+      height: 450px;
+    }
+    .banner-heading {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background-color: rgba(7, 85, 254, 0.7); /* Blue transparent background */
+      padding: 20px;
+      border-radius: 10px;
+      color: white;
+    }
 </style>
 	</head>
 
@@ -522,6 +545,11 @@ body {
 
 
 <div class="container-fluid mt-90">
+	<div class="banner">
+		<img src="images/vindus_clients_images/fire suppression.gif" alt="Banner Image">
+		<h1 class="banner-heading">Fire Suppression</h1>
+	  </div>
+	  <br>
 	<div class="project-title" >
 									
 	<!-- Title -->	
