--- a/classroom.html
+++ b/classroom.html
@@ -266,6 +266,29 @@ body {
 	height: 420px;
 	overflow-y: scroll;
 }
+.banner {
+      position: relative;
+      text-align: center;
+      color: white;
+      width: 100%;
+      height: 450px;
+      overflow: hidden;
+	  
+    }
+    .banner img {
+      width: 100%;
+      height: 450px;
+    }
+    .banner-heading {
+      position: absolute;
+      top: 15%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background-color: rgba(7, 85, 254, 0.7); /* Blue transparent background */
+      padding: 20px;
+      border-radius: 10px;
+      color: white;
+    }
 </style>
 	</head>
 
@@ -475,11 +498,14 @@ body {
 			</header>	
 <br>
 
+<br><br>
 
 
 
-
-
+<div class="banner">
+  <img src="images/vindus_clients_images/classroom.gif" alt="Banner Image">
+  <h4 class="banner-heading">Classroom Training</h4>
+</div>
 
 <div class="main" >
     <div class="jumbotron"style="background-image: url('images/vindus_clients_images/river1.gif');"  >
