--- a/online.html
+++ b/online.html
@@ -646,8 +646,8 @@ body {
   <h4 class="banner-heading">Online Training</h4>
 </div>
 
-<div class="main">
-  <div class="jumbotron" style="background-image: url('images/vindus_clients_images/water3.gif');">
+<div class="main" style="padding: 30px;">
+  <div class="jumbotron" style="background-color: #1560bd;">
       <h1 class="display-4" style="font-weight: 400; color:white; text-align: center;">ML Consultants QEHS Training</h1>
       <p class="lead" style="font-weight: 400; text-align: justify;padding-top: 20p;">MLC aims to offer cutting-edge training and research services to public and private organizations in India. MLC QEHS Training delivers professional training and research programs that are varied in topics including Environment, Health, Fire & Safety.</p>
       <hr class="my-4">
