--- a/corporate.html
+++ b/corporate.html
@@ -520,8 +520,8 @@ body {
 
 
 
-<div class="main" >
-    <div class="jumbotron"style="background-image: url('images/vindus_clients_images/river.gif');"  >
+<div class="main" style="padding: 30px;">
+  <div class="jumbotron" style="background-color: #1560bd;">
       <h1 class="display-4" style="font-weight: bold;color:white;" >ML Consultants QEHS Training</h1>
       <p class="lead" style="font-weight: 400; padding-top: 20px; text-align: justify;">MLC aim is to offer cutting-edge training and research services to public and private organizations in India. MLC QEHS Training's delivers professional training and research programmes that are varied in topics including: - Environment, Health, Fire & Safety.
     </p>
