--- a/ehstrainings.html
+++ b/ehstrainings.html
@@ -67,12 +67,9 @@
   margin-bottom: 1px; /* Adjust as needed */
   height:600px ;
   width:1024 ;
-  background-image: url('images/vindus_clients_images/tree4.gif');
   background-size: cover;
 }
 .row-ms{
-  margin-top: 100px; /* Adjust as needed */
-  margin-bottom: 100px; /* Adjust as needed */
   padding-top:100px;
   
 }
@@ -302,6 +299,29 @@
 	height: 420px;
 	overflow-y: scroll;
 }
+.banner {
+      position: relative;
+      text-align: center;
+      color: white;
+      width: 100%;
+      height: 450px;
+      overflow: hidden;
+	  
+    }
+    .banner img {
+      width: 100%;
+      height: 450px;
+    }
+    .banner-heading {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background-color: rgba(7, 85, 254, 0.7); /* Blue transparent background */
+      padding: 20px;
+      border-radius: 10px;
+      color: white;
+    }
   </style>
 </head>
 <body>
@@ -502,8 +522,11 @@
 				</div>     <!-- End header-wrapper -->
 			</header>	<!-- END HEADER -->
 
-<br>
-<div class="container-ms" >
+<br><br><br>
+<div class="banner">
+	<img src="images/vindus_clients_images/MLC Training .gif" alt="Banner Image">
+	<h4 class="banner-heading">MLC Trainings</h4>
+  </div>
   <div class="row-ms">
     <div class="col-lg-8 offset-lg-2">
       <div class="head">
@@ -513,7 +536,6 @@
           <i class="fas fa-fire" style="color:skyblue"></i> <!-- Safety icon -->
           MLConsultants QEHS Training's
         </h1>
-      </div>
       
       <div class="content" >
         <p>MLC aims to offer cutting-edge training and research services to public and private organizations in India. MLC QEHS Training's delivers professional training and research programs that cover topics including Environment, Health, Fire & Safety.</p>
