--- a/ohsms.html
+++ b/ohsms.html
@@ -196,6 +196,27 @@ body {
 	height: 420px;
 	overflow-y: scroll;
 }
+.banner {
+      position: relative;
+      text-align: center;
+      color: white;
+      width: 100%;
+      overflow: hidden;
+	  
+    }
+    .banner img {
+      width: 100%;
+    }
+    .banner-heading {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background-color: rgba(7, 85, 254, 0.7); /* Blue transparent background */
+      padding: 20px;
+      border-radius: 10px;
+      color: white;
+    }
 </style>
 	</head>
 
@@ -409,11 +430,10 @@ body {
     <section class="section-bg py-5" style="margin-top: 55px;">
         <div class="container">
             <div class="card mb-3">
-                <div class="row no-gutters">
-                    <div class="col-md-12">
-                        <img src="images/vindus_clients_images/ohsmsbanner.jpg" class="card-img" alt="Banner Image" width="500px">
-                    </div>
-                </div>
+				<div class="banner">
+					<img src="images/vindus_clients_images/OHSMS.gif" alt="Banner Image" width="500px" height="300px">
+					<h4 class="banner-heading">OHSMS</h4>
+				  </div>
             </div>
             <div class="row">
                 <div class="col-md-12 text-center mb-4">
