--- a/ppesupply.html
+++ b/ppesupply.html
@@ -68,7 +68,6 @@
       text-align: center;
       border-top-left-radius: 10px;
       border-top-right-radius: 10px;
-      margin-top: 75px;
     }
     .head h1 {
       font-size: 3rem;
@@ -246,6 +245,28 @@ body {
 	height: 420px;
 	overflow-y: scroll;
 }
+.banner {
+      position: relative;
+      text-align: center;
+      color: white;
+      width: 100%;
+      overflow: hidden;
+	  
+    }
+    .banner img {
+      width: 100%;
+	  border-radius: 20px;
+    }
+    .banner-heading {
+      position: absolute;
+      top: 80%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background-color: rgba(7, 85, 254, 0.7); /* Blue transparent background */
+      padding: 20px;
+      border-radius: 10px;
+      color: white;
+    }
   </style>
 </head>
 <body>
@@ -441,13 +462,15 @@ body {
 				</div>     <!-- End header-wrapper -->
 			</header>	<!-- END HEADER -->
 <br><br>
+<br>
 
-
-
+<div class="banner" style="padding: 30px;">
+    <img src="images/vindus_clients_images/ppessupply.gif" alt="Banner Image" height="350px" width="500px">
+    <h4 class="banner-heading">ML Consultants PPE Suppliers</h4>
+  </div>
 
 <div class="background" style="background-image: url('images/vindus_clients_images/leave1.png');">
     <div class="head">
-        <h1 style="color: white; font-size: 40px;">ML Consultants PPE Suppliers</h1>
     </div>
 
     <div class="container content-section">
