--- a/fireprotection.html
+++ b/fireprotection.html
@@ -507,7 +507,7 @@
 
 <div class="container-fluid mt-90">
 	<div class="banner">
-		<img src="images/vindus_clients_images/fire protection.gif" alt="Banner Image">
+		<img src="images/vindus_clients_images/fire.gif" alt="Banner Image">
 		<h4 class="banner-heading">Fire Protection</h4>
 	  </div>
     </div>
