--- a/footprotection.html
+++ b/footprotection.html
@@ -175,7 +175,6 @@ p {
 
 .hello{
 	background-image: url('images/vindus_clients_images/cloud3.gif');
-    margin-top: 80px;
 }
 @media only screen and (max-width: 768px) {
   /* Adjust the layout for mobile devices here */
@@ -247,6 +246,28 @@ body {
 	height: 420px;
 	overflow-y: scroll;
 }
+.banner {
+      position: relative;
+      text-align: center;
+      color: white;
+      width: 100%;
+      overflow: hidden;
+	  
+    }
+    .banner img {
+      width: 100%;
+	  border-radius: 20px;
+    }
+    .banner-heading {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background-color: rgba(7, 85, 254, 0.7); /* Blue transparent background */
+      padding: 20px;
+      border-radius: 10px;
+      color: white;
+    }
         </style>
     </head>
     <body>
@@ -445,11 +466,16 @@ body {
 
 <br><br>
 </div>
+<br>
+<div class="banner" style="padding: 30px;">
+    <img src="images/vindus_clients_images/footprotection.gif" alt="Banner Image" height="350px" width="500px">
+    <h4 class="banner-heading">Foot Protection</h4>
+  </div>
 <div class="hello">
     <div class="container1">
         <div >
             <div class="col-md-12">
-                <div class="container text-center" style="margin-top: 70px; padding: 20px; text-align: justify;">
+                <div class="container text-center" style=" padding: 20px; text-align: justify;">
                     <h2 style="margin-top: 30px;">Foot Protection: Types of Foot Protection</h2>
                     <ul style="text-align: justify;">
                         <li><strong>Steel/Composite Safety Toe:</strong> Provides protection to the toes where personnel are exposed to a crushing or impact injury. Slip-on toe caps are available when toe protection is needed for short or temporary use.</li>
