--- a/handprotection.html
+++ b/handprotection.html
@@ -68,7 +68,7 @@
 
         .container12 {
             max-width: 1200px;
-            margin: 70px auto;
+            margin: 30px auto;
             padding: 20px;
             background-color: #fff;
             border-radius: 10px;
@@ -360,6 +360,28 @@ body {
 	height: 420px;
 	overflow-y: scroll;
 }
+.banner {
+      position: relative;
+      text-align: center;
+      color: white;
+      width: 100%;
+      overflow: hidden;
+	  
+    }
+    .banner img {
+      width: 100%;
+	  border-radius: 20px;
+    }
+    .banner-heading {
+      position: absolute;
+      top: 75%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background-color: rgba(7, 85, 254, 0.5); /* Blue transparent background */
+      padding: 20px;
+      border-radius: 10px;
+      color: white;
+    }
         </style>
     </head>
     <body>
@@ -552,8 +574,11 @@ body {
 
 				</div>     <!-- End header-wrapper -->
 			</header>	<!-- END HEADER -->
-<br><br>
-
+<br><br><br>
+<div class="banner" style="padding: 30px;">
+    <img src="images/vindus_clients_images/haprotection.gif" alt="Banner Image" height="350px" width="500px">
+    <h4 class="banner-heading">Hand Protection</h4>
+  </div>
 <div class="container12" >
     <h2 style="color: #000040;">Hand Protection: Personal Protective Equipment Hand and Arm Protection</h2>
     <p style="text-align: justify;">Potential hazards to hands and arms include skin absorption of chemical or biological hazards, chemical or thermal burns, electric shock, bruises, abrasions, cuts, punctures, fractures, or amputations. Protective equipment includes gloves, finger guards, and arm coverings.</p>
